; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_main.c_qed_set_grc_config.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/qlogic/qed/extr_qed_main.c_qed_set_grc_config.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qed_dev = type { i32 }
%struct.qed_hwfn = type { i32 }
%struct.qed_ptt = type { i32 }

@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qed_dev*, i32, i32)* @qed_set_grc_config to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qed_set_grc_config(%struct.qed_dev* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.qed_dev*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.qed_hwfn*, align 8
  %9 = alloca %struct.qed_ptt*, align 8
  %10 = alloca i32, align 4
  store %struct.qed_dev* %0, %struct.qed_dev** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %11 = load %struct.qed_dev*, %struct.qed_dev** %5, align 8
  %12 = call %struct.qed_hwfn* @QED_LEADING_HWFN(%struct.qed_dev* %11)
  store %struct.qed_hwfn* %12, %struct.qed_hwfn** %8, align 8
  store i32 0, i32* %10, align 4
  %13 = load %struct.qed_dev*, %struct.qed_dev** %5, align 8
  %14 = call i64 @IS_VF(%struct.qed_dev* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %17

16:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %35

17:                                               ; preds = %3
  %18 = load %struct.qed_hwfn*, %struct.qed_hwfn** %8, align 8
  %19 = call %struct.qed_ptt* @qed_ptt_acquire(%struct.qed_hwfn* %18)
  store %struct.qed_ptt* %19, %struct.qed_ptt** %9, align 8
  %20 = load %struct.qed_ptt*, %struct.qed_ptt** %9, align 8
  %21 = icmp ne %struct.qed_ptt* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32, i32* @EAGAIN, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %35

25:                                               ; preds = %17
  %26 = load %struct.qed_hwfn*, %struct.qed_hwfn** %8, align 8
  %27 = load %struct.qed_ptt*, %struct.qed_ptt** %9, align 8
  %28 = load i32, i32* %6, align 4
  %29 = load i32, i32* %7, align 4
  %30 = call i32 @qed_dbg_grc_config(%struct.qed_hwfn* %26, %struct.qed_ptt* %27, i32 %28, i32 %29)
  store i32 %30, i32* %10, align 4
  %31 = load %struct.qed_hwfn*, %struct.qed_hwfn** %8, align 8
  %32 = load %struct.qed_ptt*, %struct.qed_ptt** %9, align 8
  %33 = call i32 @qed_ptt_release(%struct.qed_hwfn* %31, %struct.qed_ptt* %32)
  %34 = load i32, i32* %10, align 4
  store i32 %34, i32* %4, align 4
  br label %35

35:                                               ; preds = %25, %22, %16
  %36 = load i32, i32* %4, align 4
  ret i32 %36
}

declare dso_local %struct.qed_hwfn* @QED_LEADING_HWFN(%struct.qed_dev*) #1

declare dso_local i64 @IS_VF(%struct.qed_dev*) #1

declare dso_local %struct.qed_ptt* @qed_ptt_acquire(%struct.qed_hwfn*) #1

declare dso_local i32 @qed_dbg_grc_config(%struct.qed_hwfn*, %struct.qed_ptt*, i32, i32) #1

declare dso_local i32 @qed_ptt_release(%struct.qed_hwfn*, %struct.qed_ptt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
